# amazon-excel-processor

./: .gitignore  README.md  build.py  pyproject.toml
.github/workflows/: build.yml
src/amazon_excel_processor/: __init__.py  __main__.py  excel_io.py  field_filler.py  gui_entry.py  name_normalizer.py
tests/: test_field_filler.py  test_name_normalizer.py
