[project]
name = "amazon-excel-processor"
version = "0.1.0"
description = "亚马逊上架商品 Excel 模板批量规范化处理工具"
authors = [
    {name = "chrisleeli", email = "chrisleeli@tencent.com"}
]
requires-python = ">=3.11,<3.15"
dependencies = [
    "openpyxl (>=3.1.0,<4.0.0)"
]

[project.scripts]
excel-process = "amazon_excel_processor.__main__:main"

[tool.poetry]
packages = [{include = "amazon_excel_processor", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pyinstaller (>=6.18.0,<7.0.0)"
]
